Final touch - adding media

--- a/styles.css/themba's portfolio.css
+++ b/styles.css/themba's portfolio.css
@@ -4,7 +4,7 @@
 }
 body {
   min-height: 100vh;
-  background-image: url(images/white\ background\ 1.webp);
+  background-image: url(images/Background-picture.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
